lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/http_version_append/http_version_append3/http_version_append3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/http_version_append/http_version_append3/http_version_append3.c:22:25: error: use of undeclared identifier 's__b'
    http_version_append(s__b ,q_e__version );
                        ^
1 error generated.
